test/org/midica/testfiles/failing/block-else-not-alone.midica
INCLUDE inc/instruments.midica

VAR $x = 1

{ if=$x
	0  c  /4
}
{ else, elsif=$x
	0  c  /4
}